--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,6 +122,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -279,6 +280,7 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.126.114.110;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.2;
@@ -768,6 +770,7 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -871,7 +874,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -880,7 +882,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.4;
-allow 23.191.200.6;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1125,6 +1127,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1409,6 +1412,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a12:a800:11:1:124:198:131:108;
@@ -1486,7 +1490,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1513,6 +1516,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1633,6 +1637,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1761,6 +1766,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.219.237.39;
 allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
