--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -83,7 +83,6 @@ allow 107.189.30.69;
 allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.33;
-allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
@@ -140,6 +139,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
+allow 133.186.219.57;
 allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -282,6 +282,7 @@ allow 185.120.16.176;
 allow 185.126.114.110;
 allow 185.129.61.1;
 allow 185.129.61.10;
+allow 185.129.61.129;
 allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
@@ -715,6 +716,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
+allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -978,7 +980,6 @@ allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
-allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
@@ -1123,7 +1124,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1620,7 +1620,6 @@ allow 46.234.47.105;
 allow 46.246.92.35;
 allow 46.246.92.37;
 allow 46.250.243.29;
-allow 46.253.4.208;
 allow 46.38.243.210;
 allow 5.101.82.22;
 allow 5.104.84.183;
@@ -1633,7 +1632,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
