--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -56,6 +56,7 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
+deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -200,7 +201,6 @@ deny 2605:6400:30:f440:757e:adf1:55f7:5a31;
 deny 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 deny 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 deny 2605:6400:30:f503::1;
-deny 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 deny 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 deny 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 deny 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
@@ -344,7 +344,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
