--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -59,7 +59,6 @@ set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
 set_real_ip_from 104.254.90.195;
-set_real_ip_from 104.36.80.7;
 set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.1.111;
@@ -83,6 +82,7 @@ set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
+set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
@@ -980,6 +980,7 @@ set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
+set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
@@ -1620,6 +1621,7 @@ set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.246.92.35;
 set_real_ip_from 46.246.92.37;
 set_real_ip_from 46.250.243.29;
+set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.104.84.183;
