--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -345,12 +345,12 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:115:df08::1;
 allow 2a04:52c0:116:e0e3::1;
-allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
