--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -59,6 +59,7 @@ deny 104.244.79.44;
 deny 104.244.79.50;
 deny 104.244.79.61;
 deny 104.254.90.195;
+deny 104.36.80.7;
 deny 107.174.146.25;
 deny 107.189.10.175;
 deny 107.189.1.111;
@@ -1126,12 +1127,12 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:115:df08::1;
 deny 2a04:52c0:116:e0e3::1;
-deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
@@ -1629,13 +1630,13 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.110.120;
 deny 5.255.111.64;
-deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.151;
