--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -655,6 +655,7 @@ allow 198.98.62.158;
 allow 199.195.248.168;
 allow 199.195.251.119;
 allow 199.195.253.124;
+allow 199.195.253.156;
 allow 199.195.253.180;
 allow 200.122.181.2;
 allow 202.182.99.129;
@@ -698,6 +699,7 @@ allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
+allow 213.152.176.135;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -887,6 +889,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
 allow 45.38.20.153;
+allow 45.61.185.172;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -951,6 +954,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
