--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -655,6 +655,7 @@ set_real_ip_from 198.98.62.158;
 set_real_ip_from 199.195.248.168;
 set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.253.124;
+set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 2001:0:d911:c0d9:1cd3:68d9:a41c:8d66;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -814,6 +815,7 @@ set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
+set_real_ip_from 213.152.176.135;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
@@ -965,6 +967,7 @@ set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:20c3;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
+set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:253:2085:7b82:89a7:2145;
 set_real_ip_from 2605:6400:10:44f::1;
@@ -1027,6 +1030,7 @@ set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
+set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:a140:2262:7686::1;
 set_real_ip_from 2605:a141:2261:4410::1;
 set_real_ip_from 2605:a142:2263:1906::1;
@@ -1183,6 +1187,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1619,6 +1624,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.123;
 set_real_ip_from 45.38.20.153;
+set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
@@ -1683,6 +1689,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
