--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -655,6 +655,7 @@ set_real_ip_from 198.98.62.158;
 set_real_ip_from 199.195.248.168;
 set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.253.124;
+set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 200.122.181.2;
 set_real_ip_from 202.182.99.129;
@@ -698,6 +699,7 @@ set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
+set_real_ip_from 213.152.176.135;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
@@ -887,6 +889,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.123;
 set_real_ip_from 45.38.20.153;
+set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
@@ -951,6 +954,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
