--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -774,7 +774,6 @@ set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.182.99.129;
-set_real_ip_from 202.71.14.142;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
@@ -795,7 +794,6 @@ set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 206.166.251.193;
-set_real_ip_from 208.123.187.36;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
@@ -885,6 +883,38 @@ set_real_ip_from 23.129.64.190;
 set_real_ip_from 23.129.64.191;
 set_real_ip_from 23.129.64.192;
 set_real_ip_from 23.129.64.193;
+set_real_ip_from 23.129.64.194;
+set_real_ip_from 23.129.64.195;
+set_real_ip_from 23.129.64.196;
+set_real_ip_from 23.129.64.197;
+set_real_ip_from 23.129.64.198;
+set_real_ip_from 23.129.64.199;
+set_real_ip_from 23.129.64.200;
+set_real_ip_from 23.129.64.201;
+set_real_ip_from 23.129.64.202;
+set_real_ip_from 23.129.64.203;
+set_real_ip_from 23.129.64.204;
+set_real_ip_from 23.129.64.205;
+set_real_ip_from 23.129.64.206;
+set_real_ip_from 23.129.64.207;
+set_real_ip_from 23.129.64.208;
+set_real_ip_from 23.129.64.209;
+set_real_ip_from 23.129.64.210;
+set_real_ip_from 23.129.64.211;
+set_real_ip_from 23.129.64.212;
+set_real_ip_from 23.129.64.213;
+set_real_ip_from 23.129.64.214;
+set_real_ip_from 23.129.64.215;
+set_real_ip_from 23.129.64.216;
+set_real_ip_from 23.129.64.217;
+set_real_ip_from 23.129.64.218;
+set_real_ip_from 23.129.64.219;
+set_real_ip_from 23.129.64.220;
+set_real_ip_from 23.129.64.221;
+set_real_ip_from 23.129.64.222;
+set_real_ip_from 23.129.64.223;
+set_real_ip_from 23.129.64.224;
+set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.253.254;
@@ -928,7 +958,6 @@ set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
-set_real_ip_from 2.57.241.211;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
@@ -1105,6 +1134,38 @@ set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
 set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
+set_real_ip_from 2620:18c:0:192::e0:194;
+set_real_ip_from 2620:18c:0:192::e0:195;
+set_real_ip_from 2620:18c:0:192::e0:196;
+set_real_ip_from 2620:18c:0:192::e0:197;
+set_real_ip_from 2620:18c:0:192::e0:198;
+set_real_ip_from 2620:18c:0:192::e0:199;
+set_real_ip_from 2620:18c:0:192::e0:200;
+set_real_ip_from 2620:18c:0:192::e0:201;
+set_real_ip_from 2620:18c:0:192::e0:202;
+set_real_ip_from 2620:18c:0:192::e0:203;
+set_real_ip_from 2620:18c:0:192::e0:204;
+set_real_ip_from 2620:18c:0:192::e0:205;
+set_real_ip_from 2620:18c:0:192::e0:206;
+set_real_ip_from 2620:18c:0:192::e0:207;
+set_real_ip_from 2620:18c:0:192::e0:208;
+set_real_ip_from 2620:18c:0:192::e0:209;
+set_real_ip_from 2620:18c:0:192::e0:210;
+set_real_ip_from 2620:18c:0:192::e0:211;
+set_real_ip_from 2620:18c:0:192::e0:212;
+set_real_ip_from 2620:18c:0:192::e0:213;
+set_real_ip_from 2620:18c:0:192::e0:214;
+set_real_ip_from 2620:18c:0:192::e0:215;
+set_real_ip_from 2620:18c:0:192::e0:216;
+set_real_ip_from 2620:18c:0:192::e0:217;
+set_real_ip_from 2620:18c:0:192::e0:218;
+set_real_ip_from 2620:18c:0:192::e0:219;
+set_real_ip_from 2620:18c:0:192::e0:220;
+set_real_ip_from 2620:18c:0:192::e0:221;
+set_real_ip_from 2620:18c:0:192::e0:222;
+set_real_ip_from 2620:18c:0:192::e0:223;
+set_real_ip_from 2620:18c:0:192::e0:224;
+set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
@@ -1137,6 +1198,8 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:898:218::1;
+set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
 set_real_ip_from 2a02:c204:2261:2270::1;
 set_real_ip_from 2a02:c204:2263:5153::1;
@@ -1543,6 +1606,7 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1569,7 +1633,6 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1660,7 +1723,6 @@ set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.192;
-set_real_ip_from 45.9.168.43;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.102;
 set_real_ip_from 45.95.169.104;
@@ -1836,6 +1898,8 @@ set_real_ip_from 93.99.104.194;
 set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.131.2.131;
+set_real_ip_from 94.142.241.194;
+set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.156.152.234;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.121.91;
