--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -297,6 +297,38 @@ set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
 set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
+set_real_ip_from 2620:18c:0:192::e0:194;
+set_real_ip_from 2620:18c:0:192::e0:195;
+set_real_ip_from 2620:18c:0:192::e0:196;
+set_real_ip_from 2620:18c:0:192::e0:197;
+set_real_ip_from 2620:18c:0:192::e0:198;
+set_real_ip_from 2620:18c:0:192::e0:199;
+set_real_ip_from 2620:18c:0:192::e0:200;
+set_real_ip_from 2620:18c:0:192::e0:201;
+set_real_ip_from 2620:18c:0:192::e0:202;
+set_real_ip_from 2620:18c:0:192::e0:203;
+set_real_ip_from 2620:18c:0:192::e0:204;
+set_real_ip_from 2620:18c:0:192::e0:205;
+set_real_ip_from 2620:18c:0:192::e0:206;
+set_real_ip_from 2620:18c:0:192::e0:207;
+set_real_ip_from 2620:18c:0:192::e0:208;
+set_real_ip_from 2620:18c:0:192::e0:209;
+set_real_ip_from 2620:18c:0:192::e0:210;
+set_real_ip_from 2620:18c:0:192::e0:211;
+set_real_ip_from 2620:18c:0:192::e0:212;
+set_real_ip_from 2620:18c:0:192::e0:213;
+set_real_ip_from 2620:18c:0:192::e0:214;
+set_real_ip_from 2620:18c:0:192::e0:215;
+set_real_ip_from 2620:18c:0:192::e0:216;
+set_real_ip_from 2620:18c:0:192::e0:217;
+set_real_ip_from 2620:18c:0:192::e0:218;
+set_real_ip_from 2620:18c:0:192::e0:219;
+set_real_ip_from 2620:18c:0:192::e0:220;
+set_real_ip_from 2620:18c:0:192::e0:221;
+set_real_ip_from 2620:18c:0:192::e0:222;
+set_real_ip_from 2620:18c:0:192::e0:223;
+set_real_ip_from 2620:18c:0:192::e0:224;
+set_real_ip_from 2620:18c:0:192::e0:225;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -328,6 +360,8 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:898:218::1;
+set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
 set_real_ip_from 2a02:c204:2261:2270::1;
 set_real_ip_from 2a02:c204:2263:5153::1;
